# aws-autorecycle

./: .bandit  .gitignore  .trivyignore  Compose.yaml  Dockerfile  Jenkinsfile  Makefile  README.md  Taskfile.yaml  batect.yml  compose.yaml  pyproject.toml  repository.yaml  requirements-dev.txt  requirements.txt  task
containers/dev/: Dockerfile
containers/lambda-test/: Dockerfile
containers/python-tools/: Dockerfile
containers/release/: Dockerfile
src/autorecycle/: autorecycle_lambda.py
src/autorecycle_delayer/: README.md  aws_autorecycle_delayer_lambda.py  common.py
src/autorecycle_invoke_stepfunctions/: README.md  aws.py  get_account_details.py  get_component_details.py  get_environment.py  handler.py  logger.py  sf_start_execution.py
src/autorecycle_scale_asg/: README.md  autorecycle.py  autoscaling.py  aws.py  handler.py  lambda_types.py  logger.py  models.py
src/check_consul_health/: main.py
src/get_consul_nodes/: main.py
src/mongo_recycler/: README.md  mdtp.pem
src/mongo_recycler/connectors/: aws.py  mongo.py  sensu.py
src/mongo_recycler/models/: decision.py  instances.py
src/mongo_recycler/process/: decision.py  execute.py  instances.py  pre_step_checks.py  replica_set_health.py  step.py
src/mongo_recycler/utils/: logger.py  poll.py
src/monitor_autorecycle/: README.md  main.py
src/terminate_consul_instance/: main.py
terraform/: autorecycle_delayer_lambda.tf  autorecycle_lambda.tf  autorecycle_mongo_lambda.tf  consul_lambdas.tf  consul_recycle_state_machine.tf  dynamodb.tf  invoke_stepfunctions_lambda.tf  local.tf  monitor_autorecycle_lambda.tf  outputs.tf  scale_asg_lambda.tf  state_machine.tf  terraform.tf  variables.tf
tests/integration/: test_lambda.py  test_pass.py
tests/test_data/autorecycle_invoke_stepfunctions/: test-event-create-or-udpate-tags.json  test-event-delete-tags.json  test-event-instance-retirement-recycler.json  test-event-launch-template.json  test-event-no-update-present.json  test-event.json
tests/test_data/autorecycle_scale_asg/: describe-2-asgs-2-instances-1-out-of-date.json  describe-2-asgs-2-up-to-date-instances.json  describe-2-asgs-no-instances.json  describe-asg-launch-template-2-out-of-date.json  describe-asg-launch-template-from-launch-configuration.json  describe-asg-similar-name.json  describe-asg-underscore-abc.json  describe-asg-underscore-az.json  describe-asg.json  describe-last-scaling-activity.json  describe-scaling-activities.json  execute-scaling-policy-failure.json  execute-scaling-policy.json
tests/test_data/monitor_autorecycle/: describe_asg_lc.py  describe_asg_lt.py
tests/unit/: test_monitor_autorecycling.py
tests/unit/autorecycle/: test_output.py  test_send_sqs.py
tests/unit/autorecycle_delayer/: test_lambda_handler.py  test_string_to_time.py
tests/unit/autorecycle_invoke_stepfunctions/: test_construct_payload.py  test_get_account_details.py  test_get_asg_autorecycling_tags.py  test_get_component_details.py
tests/unit/autorecycle_scale_asg/: fixtures.py  test_autorecycle.py  test_autoscaling.py  test_handler.py
tests/unit/check_consul_health/: test_check_consul_health.py
tests/unit/get_consul_nodes/: test_get_consul_nodes.py
tests/unit/mongo_recycler/: test_utils.py
tests/unit/mongo_recycler/connectors/: aws_test.py  mongo_test.py  sensu_test.py
tests/unit/mongo_recycler/process/: cluster_health_test.py  decision_test.py  execute_test.py  instances_test.py  pre_step_checks_test.py  step_test.py
tests/unit/mongo_recycler/utils/: poll_test.py
tests/unit/monitor_autorecycle/: test_monitor_autorecycling.py
tests/unit/terminate_consul_instance/: test_terminate_consul_instance.py
