[project]
name = "aws-autorecycle"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "aws-lambda-powertools",
  "boto3==1.16.38",
  "pymongo==4.6.3",
  "pymongo-auth-aws==1.1.0",
  "aws-lambda-logging==0.1.1",
  "ansicolors==1.1.8",
  "pytz==2023.3",
  "pydantic>=2.4.0,<3",
  "urllib3>=1.25.4,<1.27",
  "tenacity==8.2.3",
  "rfc3339==6.2",
  "hvac==0.11.2",
  "urllib3>=1.25.4,<1.27",
  "freezegun==1.5.5",
  "moto==2.2.9",
  "parameterized==0.9.0",
]

[dependency-groups]
dev = [
  "mypy>=1.11.2",
  "pytest>=8.3.3",
]
